// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelledValue Component should render - no props 1`] = `
<div
  className="LabelledValue"
>
  <div
    className="Content"
  />
</div>
`;

exports[`LabelledValue Component should render children 1`] = `
<div
  className="LabelledValue"
>
  <div
    className="LabelContainer"
  >
    <small
      className="Label"
    >
      Label
    </small>
  </div>
  <div
    className="Content"
  >
    <h5>
      child
    </h5>
  </div>
</div>
`;

exports[`LabelledValue Component should render with label and value 1`] = `
<div
  className="LabelledValue"
>
  <div
    className="LabelContainer"
  >
    <small
      className="Label"
    >
      Label
    </small>
  </div>
  <div
    className="Content"
  >
    <h6>
      a value
    </h6>
  </div>
</div>
`;

exports[`LabelledValue Component should render with label and value when value is boolean 1`] = `
<div
  className="LabelledValue"
>
  <div
    className="LabelContainer"
  >
    <small
      className="Label"
    >
      Label
    </small>
  </div>
  <div
    className="Content"
  >
    <h6>
      false
    </h6>
  </div>
</div>
`;
